1. 更新readme.md, 2.建立obituary_base.html作為訃聞主頁, 3.調整login機制, 4.新增登出按鈕

--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,7 @@
             <a href="{% url 'login' %}" class="service-button">
                 進入雲端案件管理
             </a>
-            <a href="{% url 'login' %}" class="service-button">
+            <a href="{% url 'login' %}?next={% url 'obituary_base' %}" class="service-button">
                 進入雲端訃聞製作
             </a>
             <a href="https://social-data-dash.onrender.com" class="service-button">
