--- a/templates/obituary_base.html
+++ b/templates/obituary_base.html
@@ -7,12 +7,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #f8f9fa;
+            background-color: #385A52;
             padding: 20px;
         }
         
         .title-container {
-            background-color: #4a76cf;
+            background-color: #B9AD9A;
             color: white;
             padding: 20px;
             border-radius: 10px;
@@ -85,7 +85,6 @@
         <div class="obituary-list">
             <h3 class="text-center list-title">雲端訃聞列表</h3>
             <p class="text-center text-muted">隨便一些sample</p>
-            <p class="text-center">Ex.</p>
             <div class="list-group">
                 <a href="#" class="list-group-item list-group-item-action">
                     2024/01/05 案件名稱：xxx，訃聞連結：Http://...
