--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
             min-height: 100vh;
             display: flex;
             flex-direction: column;
-            background-color: #f8f9fa;
+            background-color: #385A52;
         }
         
         .main-container {
@@ -48,7 +48,7 @@
             height: 400px;
             border: none;
             border-radius: 10px;
-            background-color: #4a76cf;
+            background-color: #B9AD9A;
             color: white;
             display: flex;
             align-items: center;
