--- a/templates/obituary_base.html
+++ b/templates/obituary_base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>楊子佛教禮儀雲端訃聞系統</title>
+    {% comment %} <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon"> {% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -84,7 +85,7 @@
         <!-- 訃聞列表 -->
         <div class="obituary-list">
             <h3 class="text-center list-title">雲端訃聞列表</h3>
-            <p class="text-center text-muted">隨便一些sample</p>
+            <p class="text-center text-muted">sample</p>
             <div class="list-group">
                 <a href="#" class="list-group-item list-group-item-action">
                     2024/01/05 案件名稱：xxx，訃聞連結：Http://...
