--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登入 - 楊子佛教禮儀雲端訃聞系統</title>
-    {% comment %} <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon"> {% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -90,9 +89,8 @@
                             {% endfor %}
                         {% endif %}
                         
-                        <form method="post" action="{% url 'login' %}{% if next %}?next={{ next }}{% endif %}">
+                        <form method="post" action="{% url 'login' %}">
                             {% csrf_token %}
-                            <input type="hidden" name="next" value="{{ next }}">
                             <div class="mb-4">
                                 <label for="username" class="form-label">請輸入帳號</label>
                                 <input type="text" class="form-control" id="username" name="username" 
