--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>楊子佛教禮儀雲端訃聞系統</title>
+    <title>XX佛教禮儀雲端訃聞系統</title>
     <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -151,7 +151,9 @@
             <span class="department">部門：{{ request.session.department }}</span>
             <span class="title">職稱：{{ request.session.title }}</span>
             <span class="permission-level">權限等級：{{ request.session.permission_level }}</span>
-            <span class="company">所屬公司別：{{ request.session.company }}</span>
+            {% comment %} <span class="company">所屬公司別：{% if {{ request.session.company }} == taichung %}台中{% elif %}台北{% endif %}</span> {% endcomment %}
+            <span class="company">所屬公司別：{% if request.session.company == 'taichung' %}台中服務處{% elif request.session.company == 'taipei' %}台北服務處{% elif request.session.company == 'kaohsiung' %}高雄服務處{% endif %}</span>
+            {% comment %} <span class="company">所屬公司別：{% if {{ request.session.company }} == taichung</span> {% endcomment %}
             {% comment %} <span class="created_at">註冊日期：{{ request.session.created_at }}</span> {% endcomment %}
             {% comment %} <span class="updated_at">更新日期：{{ request.session.updated_at }}</span> {% endcomment %}
             
@@ -167,7 +169,7 @@
     </div>
 
     <div class="main-container">
-        <h1 class="system-title">楊子佛教禮儀雲端系統</h1>
+        <h1 class="system-title">XX佛教禮儀雲端系統</h1>
         <div class="button-container">
             {% if request.session.is_authenticated %}
                 {% if request.session.permission_level in '0,1,2' %}
