--- a/templates/buy_car.html
+++ b/templates/buy_car.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>楊子佛教禮儀-致贈花禮購物車</title>
+    <title>XX佛教禮儀-致贈花禮購物車</title>
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -384,7 +384,7 @@
     </script>
 
     <div class="copyright">
-        © {% now "Y" %} 楊子佛教禮儀雲端訃聞系統 All Rights Reserved. 
+        © {% now "Y" %} XX佛教禮儀雲端訃聞系統 All Rights Reserved. 
     </div>
     <div class="shopping-cart-btn" onclick="openCart()">
         <i class="fas fa-shopping-cart"></i>
