--- a/templates/preview_employee.html
+++ b/templates/preview_employee.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>職員列表 - 楊子佛教禮儀雲端訃聞系統</title>
+    <title>職員列表 - XX佛教禮儀雲端訃聞系統</title>
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -112,11 +112,11 @@
                         <td>{{ emp.title }}</td>
                         <td>
                             {% if emp.company == 'taichung' %}
-                                台中楊子
+                                台中XX
                             {% elif emp.company == 'taipei' %}
-                                台北楊子
+                                台北XX
                             {% elif emp.company == 'kaohsiung' %}
-                                高雄楊子
+                                高雄XX
                             {% else %}
                                 {{ emp.company }}
                             {% endif %}
